# CGS-Py

./: README.md  __init__.py  basic-geometry.py  basic_geometry.py  core_geometric_system.py  example-usage.py  example_usage.py  generate_custom_sine_table.py  pyproject.toml  setup.py  trigonometry.py  usage-example-ESM.js
.github/workflows/: python-publish.yml
