[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Core Geometric System ™"
version = "1.0.3"
description = "Exact geometric formulas for area, circumference, and volume"
authors = [
    { name="Gaal Sandor", email="gmac4247@yahoo.com" }
]
license = { text = "® All rights reserved" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = []
