[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Core Geometric System ™"
version = "1.0.4"
description = "Exact geometric formulas for calculating circumference, area, and volume, and trigonometry based on circumference is 6.4r"
authors = [
    { name="Gaal Sandor", email="gmac4247@yahoo.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
dependencies = []
